# accfifo

./: .gitignore  README.rst  pltr.csv  pyproject.toml  test_accfifo.py
accfifo/: cli.py  entry.py  fifo.py  munch.py  read_csv.py
src/: version.py
src/accfifo/: __init__.py  cli.py  entry.py  fifo.py  main.py  munch.py  read_csv.py  tax_row.py
